fixed card content overflow issue

--- a/angular-afpxzw/src/styles.css
+++ b/angular-afpxzw/src/styles.css
@@ -1,4 +1,4 @@
-/* Add application styles & imports to this file! */
+/* Add application styles & imports to this file! *//* Add application styles & imports to this file! */
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
 html, body{
   font-family: Arial, Helvetica, sans-serif;
@@ -154,12 +154,16 @@ content-cards .box .row .column{
     width: 50%;
     float: left;
     padding: 5px;
+    font-size: 0.7em;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    hyphens: auto;
+
 }
-.content-description, .featured-description {
-  /* white-space: nowrap; */ 
-  /* overflow: hidden;
-  text-overflow: ellipsis; */
-}
+
 .content-items>div , .featured-items>div{
     /* display: flex; */
     /* flex-direction: row; */
@@ -169,11 +173,6 @@ content-cards .box .row .column{
 .content .column.bookimg-cntr {
     padding-right: 10px;
     padding-top: 1.5em;
-}
-.featured-description {
-  /* white-space: nowrap; 
-  overflow: hidden;
-  text-overflow: ellipsis; */
 }
 .featured .column{
   width: 100%;
@@ -185,7 +184,8 @@ content-cards .box .row .column{
   clear: both;
 }
 .row{
-  max-width: 100%;
+  /* max-width: 100%; */
+  width: inherit;
 }
 .featured .bookimg-cntr img{
     max-width: 30%;
